<resources>
    <string name="app_name">MovieApp</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="poster">poster</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="rating">/10</string>
    <string name="title_favorite">favorite</string>
    <string name="no_data">no data</string>
</resources>